Finalizando formulário, corrigindo alguns bugs e começando página de inscrição realizada

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 			<div class="flexslider top_slider">					
 				<div class="col-lg-6 col-md-12 col-xs-12">
 						<div class="contents">
-							<h2 class="head-title"><strong>CAPACITAÇÃO EM</strong></h2>
+							<h2 class="head-title">CAPACITAÇÃO EM</h2>
 							<h2 class="head-title"><b>EVENTOS DE INOVAÇÃO</b></h2>
 							<p class="tagp">Aprenda na prática como revolucionar o ecossistema universitário de Governador Valadares - MG por meio de eventos relacionados às temáticas de empreendedorismo e inovação.</p>
 						</div>
@@ -230,8 +230,8 @@
 				<!-- CONTAINER -->
 				<div class="container" data-appear-top-offset="-200" data-animated="fadeInUp">
 					<div class="tab-pane fade in active1 clearfix" id="tab7">
-						<h2><b>NOSSA</b></h2>
-						<h2>METODOLOGIA</h2>
+						<h2>NOSSA</h2>
+						<h2><b>METODOLOGIA</b></h2>
 						<p>Os conhecimentos adquiridos na participação de eventos de empreendedorismo e inovação são inúmeros e o planejamento e operacionalização de tais projetos proporcionam uma visão ainda mais ampla e completa de todo o processo.</p>
 					</div>
 
@@ -272,10 +272,10 @@
 			<!-- CONTAINER -->
 			<div class="purpose_block">
 						<div class="bloco1">
-						<h2><strong><b>CONHEÇA</b></strong></h2>
+						<h2>CONHEÇA</h2>
 						<h2><strong><b><span style="color: #ff8701;">O EDITAL!</span></b></strong></h2>
 						<p>Acesse o Edital do Programa Campus Tech e saiba mais sobre a capacitação em eventos de inovação.</p>
-						<a class="btn btn-active com_borda_verde" href="https://drive.google.com/u/0/uc?id=1AXU0Yx1KaOLz4Igl1zKurwjVSY4886dI&export=download" ><span data-hover="Baixar">CONHEÇA O<br> EDITAL</span></a>
+						<a class="btn btn-active com_borda_verde" href="index.html" ><span data-hover="Baixar">CONHEÇA O<br> EDITAL</span></a>
 						</div>
 						<div class="bloco2">
 							<h3><span style="color: #FB133A;"><b>QUEM PODE SE INSCREVER?</b></span></h3>
@@ -301,8 +301,8 @@
 			<!-- CONTAINER -->
 			<div class="purpose_block">
 			<div class="bloco1">
-				<h2><strong>O QUE VOCÊ</strong></h2>
-				<h2><strong>IRÁ APRENDER?</strong></h2>
+				<h2>O QUE VOCÊ</h2>
+				<h2><b>IRÁ APRENDER?</b></h2>
 				<p>Durante a capacitação serão apresentados aspectos teóricos, cases e aplicações práticas para <span style="color: #FB133A;">planejamento, gerenciamento e execução</span> de eventos de empreendedorismo e inovação. Dessa forma, você será capaz de organizar eventos de alto valor agregado, impactando o ambiente universitário e local.</p>
 			</div>
 			<div class="bloco2">
@@ -314,7 +314,7 @@
 						<div id="popup1" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2><span style="color: #62186A; font-weight: 500;">TRILHA 1 - CONTEXTUALIZAÇÃO</span></h2>
+								<h2><span style="color: #400A46; font-weight: 500;">TRILHA 1</span><br><span style="color: #ff8701; font-weight: 800;">CONTEXTUALIZAÇÃO</span></h2>
 								<div class="content">
 									<p>Apresentação dos principais conceitos e conteúdos relacionados às temáticas de inovação e empreendedorismo. Nesta trilha, cada participante terá contato com tópicos como:</p>
 
@@ -330,7 +330,7 @@
 						<div id="popup3" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2><span style="color: #00BAA7; font-weight: 500;">TRILHA 2 – EVENTOS DE INOVAÇÃO</span></h2>
+								<h2><span style="color: #400A46; font-weight: 500;">TRILHA 2</span><br><span style="color: #00BAA7; font-weight: 800;">EVENTOS DE INOVAÇÃO</span></h2>
 								<div class="content">
 									<p>Nesta etapa, os participantes da capacitação irão assimilar objetivos dos eventos de inovação, suas aplicações e resultados, assim como colocar em prática nos cenários acadêmicos e na sociedade.</p>
 
@@ -342,7 +342,7 @@
 						<div id="popup4" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2><span style="color: #FB133A; font-weight: 500;">TRILHA 3 – PLANEJAMENTO DE EVENTOS</span></h2>
+								<h2><span style="color: #FB133A; font-weight: 500;">TRILHA 3</span><br><span style="color: #ff8701; font-weight: 800;">PLANEJAMENTO DE EVENTOS</span></h2>
 								<div class="content">
 									<p>Na fase de planejamento é importante compreender os direcionamentos estratégicos para a execução de um evento de inovação e empreendedorismo, qual será seu impacto e quais são os resultados almejados.</p>
 
@@ -354,7 +354,7 @@
 						<div id="popup5" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
-								<h2><span style="color: #ff8701; font-weight: 500;">TRILHA 4 – EVENTO NA PRÁTICA</span></h2>
+								<h2><span style="color: #ff8701; font-weight: 500;">TRILHA 4</span><br><span style="color: #ff8701; font-weight: 800;">EVENTO NA PRÁTICA</span></h2>
 								<div class="content">
 									<p>Momento de colocar em prática tudo o que foi aprendido ao longo do Programa Campus Tech e nada melhor do que colocar a mão na massa para garantir o aprendizado. Nesta etapa, os participantes irão atuar na realização de um evento real de inovação na cidade de Governador Valadares/MG.</p>
 
@@ -387,7 +387,7 @@
 			<div class="purpose_block">
 				<!-- CONTAINER -->
 				<div class="bloco1">
-					<h2><b>PERGUNTAS</b></h2>
+					<h2>PERGUNTAS</h2>
 					<h2><b><span style="color: #ff8701;">FREQUENTES</span></b></h2>
 					<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
 				</div>
