--- a/inscricao.html
+++ b/inscricao.html
@@ -40,6 +40,7 @@
 	<script src="js/jquery.BlackAndWhite.js"></script>
 	<script src="js/myscript.js" type="text/javascript"></script>
 	<script src="js/validatform.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 	<script>
 		
 		//PrettyPhoto
@@ -114,7 +115,7 @@
 					  <input id="Nome-Completo" name="Nome-Completo" type="text" placeholder="Nome Completo">
 					  <span class='msg-erro msg-nome'></span>
 
-					  <input id="Documento-(CPF/RG)" name="Documento-(CPF/RG)" type="text" placeholder="CPF">
+					  <input onkeypress="$(this).mask('000.000.000-00');" id="Documento-(CPF/RG)" name="Documento-(CPF/RG)" type="text" placeholder="CPF">
 					  <span class='msg-erro msg-documento'></span>
 				
 					  <input id="E-mail" name="E-mail" type="text" placeholder="E-mail">
@@ -123,7 +124,7 @@
 					  <input id="Idade" name="Idade" type="number" placeholder="Idade">
 					  <span class='msg-erro msg-idade'></span>
 
-					  <input id="Telefone" name="Telefone" type="number" placeholder="Telefone">
+					  <input onkeypress="$(this).mask('(00) 0 0000-0000');" id="Telefone" name="Telefone" type="text" placeholder="Telefone">
 					  <span class='msg-erro msg-telefone'></span>
 
 					  <select id="Estado" name="Estado" placeholder="Estado">
@@ -190,7 +191,7 @@
 					  </select>
 					  <span class='msg-erro msg-trabalha'></span>
 
-					  <input id="horario" name="horario" type="number" placeholder="Horário">
+					  <input id="horario" name="horario" type="text" placeholder="Horário">
 					  <span class='msg-erro msg-horario'></span>
 
 					  <select id="Necessidades-especiais?" name="Necessidades-especiais?" placeholder="Necessidades Especiais?">
@@ -203,7 +204,15 @@
 					  <input id="Se-sim-escreva-aqui" name="Se-sim-escreva-aqui" type="text" placeholder="Se sim, escreva aqui">
 					  <span class='msg-erro msg-SeSim'></span>
 
-					  <input id="capacitacao" name="capacitacao" type="text" placeholder="Como ficou sabendo da capacitação?">
+					  <select id="capacitacao" name="capacitacao" placeholder="Como ficou sabendo da capacitação?">
+					  	<option value="">Como ficou sabendo?</option>
+						<option value="Linkedin">Linkedin</option>
+						<option value="Instragram">Instragram</option>
+						<option value="Whatsapp">Whatsapp</option>
+						<option value="Amigo">Amigo</option>
+						<option value="Comercial">Comercial</option>
+						<option value="Pesquisa na Internet">Pesquisa na Internet</option>
+					  </select>
 					  <span class='msg-erro msg-capacitacao'></span>
 
 					  <textarea id="Interesse" name="Interesse" placeholder="Carta de intenção (Por que você deve ser selecionado?)"></textarea>
@@ -226,8 +235,9 @@
 							</div>
 					  </div>
 					  <span class='msg-erro msg-politica'></span>
+					  <div class="submit_forms">
 					  <input class="btn btn-active" type="submit" value="INSCREVER">
-					  <span class='msg-erro msg-envio'></span>
+					  </div>
 					</form>
 			</div>
 		</section><!-- //HOME -->
