--- a/index.html
+++ b/index.html
@@ -242,10 +242,10 @@
 						<img src="images/i4.png" alt="">
 					</ul>
 					<ul class="ul_metodologia ul_metodologia_w">
-						<a class="btn btn-active" href="#tab1" data-toggle="tab" style="background:#62186A;"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Planejamento</span></a>
-						<a class="btn btn-active" href="#tab2" data-toggle="tab" style="background:#FF8701"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Ferramentas</span></a>
-						<a class="btn btn-active" href="#tab3" data-toggle="tab" style="background:#FB133A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Gestão</span></a>
-						<a class="btn btn-active" href="#tab4" data-toggle="tab" style="background:#62186A"><span data-hover="Clique aqui" style="line-height: 10px; color:white; width:220px">Execução</span></a>
+						<a class="btn btn-active hoverboton1 bottonmotodo" href="#tab1" data-toggle="tab">Planejamento</a>
+						<a class="btn btn-active hoverboton2 bottonmotodo" href="#tab2" data-toggle="tab">Ferramentas</a>
+						<a class="btn btn-active hoverboton3 bottonmotodo" href="#tab3" data-toggle="tab">Gestão</a>
+						<a class="btn btn-active hoverboton1 bottonmotodo" href="#tab4" data-toggle="tab">Execução</a>
 					</ul>
 					<!-- CASTOM TAB -->
 					<div id="myTabContent" class="tab-content">
@@ -310,7 +310,7 @@
 				<h3><span style="color: #FB133A; font-weight: 500;">CONHEÇA AS TRILHAS:</span></h3>
 				<div class="container1">
 					<div class="popup2">
-						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#62186A;" href="#popup1">CONTEXTUALIZAÇÃO</a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender hoverbotonoquevaiaprender1 bottonoquevaiaprender" href="#popup1">CONTEXTU-<br>ALIZAÇÃO</a>
 						<div id="popup1" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -326,7 +326,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#00BAA7;" href="#popup3">EVENTOS <br>DE INOVAÇÃO</a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender hoverbotonoquevaiaprender2 bottonoquevaiaprender" href="#popup3">EVENTOS <br>DE INOVAÇÃO</a>
 						<div id="popup3" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -338,7 +338,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#FB133A;" href="#popup4">PLANEJAMENTO <br>DE EVENTOS</a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender hoverbotonoquevaiaprender3 bottonoquevaiaprender" href="#popup4">PLANEJAMENTO <br>DE EVENTOS</a>
 						<div id="popup4" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
@@ -350,7 +350,7 @@
 								</div>
 							</div>
 						</div>
-						<a id="colorpopup1" class="btn btn-active btn_aprender" style="background:#ff8701;" href="#popup5">EVENTO <br>NA PRÁTICA</a>
+						<a id="colorpopup1" class="btn btn-active btn_aprender hoverbotonoquevaiaprender4 bottonoquevaiaprender" href="#popup5">EVENTO <br>NA PRÁTICA</a>
 						<div id="popup5" class="overlay1">
 							<div class="popup">
 								<a class="close" href="#popup2">&times;</a>
