--- a/inscricao.html
+++ b/inscricao.html
@@ -215,6 +215,13 @@
 					  </select>
 					  <span class='msg-erro msg-capacitacao'></span>
 
+					  <select id="Publico-de-Reassentamento?" name="Publico-de-Reassentamento?" placeholder="Publico-de-Reassentamento?">
+						<option value="">Público de Reassentamento?</option>
+						<option value="Sim">Sim</option>
+						<option value="Não">Não</option>
+					  </select>
+					  <span class='msg-erro msg-publico'></span>
+
 					  <textarea id="Interesse" name="Interesse" placeholder="Carta de intenção (Por que você deve ser selecionado?)"></textarea>
 					  <span class='msg-erro msg-interesse'></span>
 
