--- a/inscricao_realizada.html
+++ b/inscricao_realizada.html
@@ -85,6 +85,7 @@
 		<section>
 			<div class="mensagem de envio">
 				<a href="index.html" ><img class = "logo" src="images/logo_submit.png" alt=""></a>
+				<img src="images/inscricao_realizada.png" alt="">
 				<p>MONITORE SEU E-MAIL PARA SABER OS PRÓXIMOS PASSOS!</p>
 			</div>
 		</section>
