Adicionando algumas alterações

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<!-- MENU -->
 					<div class="pull-right">
 						<nav class="navmenu center">
-							<a class="btn btn-active" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
+							<a class="btn btn-active com_borda_roxa" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
 						</nav>
 					</div><!-- //MENU -->
 				</div><!-- //MENU BLOCK -->
@@ -143,9 +143,9 @@
 							<div class="service-item">
 							<img src="images/Imagem1.png" alt="">
 							<ul class="texto_inicial">
-								<li class="closed">Capacitação com bolsa de estudo</li>
-								<li class="closed">Aulas on-line e presenciais</li>
-								<li class="closed">Realização de evento ao final</li>
+								<li class="closed">• Capacitação com bolsa de estudo</li>
+								<li class="closed">• Aulas on-line e presenciais</li>
+								<li class="closed">• Realização de evento ao final</li>
 							</ul>
 							<div class="container1">
 								<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="Clique aqui">Inscreva-se</span></a>
