--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 					<div class="text-white-50 small">
 						<div class="mb-2"><img src="images/logo_final.png" alt=""></div>
 						<p>Ainda tem dúvidas? Entre em contato conosco:</p>
-						<p><i class="fa fa-envelope"> oficial@campustechmariana.com.br</i></p>
+						<p><i class="fa fa-envelope"> oficial@campustechgovernadorvaladares.com.br</i></p>
 						<p><i class="fa fa-phone"> +55 31 3401-1046</i></p>
 						<div class="mb-2">&copy; Todos os direitos reservados a Campus Tech, 2022.</div>
 					</div>
