Alterando campo do forms

--- a/inscricao.html
+++ b/inscricao.html
@@ -172,7 +172,7 @@
 					  </select>
 					  <span class='msg-erro msg-formato'></span>
 
-					  <input id="turno" name="turno" type="text" placeholder="Turno de Trabalho">
+					  <input id="turno" name="turno" type="text" placeholder="Turno da Universidade">
 					  <span class='msg-erro msg-turno'></span>
 
 					  <input id="Número-de-matrícula" name="Número-de-matrícula" type="text" placeholder="Matrícula">
@@ -191,7 +191,7 @@
 					  </select>
 					  <span class='msg-erro msg-trabalha'></span>
 
-					  <input id="horario" name="horario" type="text" placeholder="Turno da Universidade">
+					  <input id="horario" name="horario" type="text" placeholder="Turno de Trabalho">
 					  <span class='msg-erro msg-horario'></span>
 
 					  <select id="Necessidades-especiais?" name="Necessidades-especiais?" placeholder="Necessidades Especiais?">
