--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 						<h2>CONHEÇA</h2>
 						<h2><strong><b><span style="color: #ff8701;">O EDITAL!</span></b></strong></h2>
 						<p>Acesse o Edital do Programa Campus Tech e saiba mais sobre a capacitação em eventos de inovação.</p>
-						<a class="btn btn-active com_borda_verde" href="index.html" ><span data-hover="Baixar">CONHEÇA O<br> EDITAL</span></a>
+						<a class="btn btn-active com_borda_verde" href="https://drive.google.com/file/d/17gr6MTFgEag7QCZVt-ewcRaDf3UUsKkN/view?usp=sharing" target="_blank"><span data-hover="Baixar">CONHEÇA O<br> EDITAL</span></a>
 						</div>
 						<div class="bloco2">
 							<h3><span style="color: #FB133A;"><b>QUEM PODE SE INSCREVER?</b></span></h3>
@@ -487,7 +487,7 @@
 					<div class="text-white-50 small">
 						<div class="mb-2"><img src="images/logo_final.png" alt=""></div>
 						<p>Ainda tem dúvidas? Entre em contato conosco:</p>
-						<p><i class="fa fa-envelope"> oficial@campustechgovernadorvaladares.com.br</i></p>
+						<p><i class="fa fa-envelope"> oficial@campustechvaladares.com.br</i></p>
 						<p><i class="fa fa-phone"> +55 31 3401-1046</i></p>
 						<div class="mb-2">&copy; Todos os direitos reservados a Campus Tech, 2022.</div>
 					</div>
