--- a/inscricao.html
+++ b/inscricao.html
@@ -106,7 +106,7 @@
 				<div class="texto">
 					<h3>VOCÊ ESTÁ PERTO DE GARANTIR SUA CAPACITAÇÃO!</h3>
 					<h2>BORA INICIAR ESSA JORNADA?<h2>
-					<h4>*Baixe o <a href="https://docs.google.com/spreadsheets/d/1ZijXaejT9taAsDHTVgNWx6OJzTIVVNKZ/copy" target="_blank">Questionário de Deligência</a>, assine de forma manual ou digital e clique em anexar o PDF para realizar sua inscrição.</h4>
+					<h4>*Baixe o <a href="https://docs.google.com/spreadsheets/d/1Dglxm52RSiR4UdVLxfJmEmZQ7TMfcuGw/copy" target="_blank">Questionário de Deligência</a>, assine de forma manual ou digital e clique em anexar o PDF para realizar sua inscrição.</h4>
 				</div>
 				<div class="content">
 					<form name="form" id="Página1">
@@ -230,7 +230,7 @@
 					  <textarea id="Interesse" name="Interesse" placeholder="Carta de intenção (Por que você deve ser selecionado?)"></textarea>
 					  <span class='msg-erro msg-interesse'></span>
 
-					  <label for="LinkQuetionario">Anexar o <a href="https://docs.google.com/spreadsheets/d/1ZijXaejT9taAsDHTVgNWx6OJzTIVVNKZ/copy" target="_blank">Questionário de Deligência</a>: </label><input type="file"  accept="application/pdf" name="LinkQuetionario" class="LinkQuetionario" id="LinkQuetionario" required>
+					  <label for="LinkQuetionario">Anexar o <a href="https://docs.google.com/spreadsheets/d/1Dglxm52RSiR4UdVLxfJmEmZQ7TMfcuGw/copy" target="_blank">Questionário de Deligência</a>: </label><input type="file"  accept="application/pdf" name="LinkQuetionario" class="LinkQuetionario" id="LinkQuetionario" required>
 					  <span class='msg-erro msg-questionario'></span>
 
 					  <div class="Politicadiv">
@@ -263,7 +263,7 @@
 					<div class="text-white-50 small">
 						<div class="mb-2"><img src="images/logo_final.png" alt=""></div>
 						<p>Ainda tem dúvidas? Entre em contato conosco:</p>
-						<p><i class="fa fa-envelope"> oficial@campustechgovernadorvaladares.com.br</i></p>
+						<p><i class="fa fa-envelope"> oficial@campustechvaladares.com.br</i></p>
 						<p><i class="fa fa-phone"> +55 31 3401-1046</i></p>
 						<div class="mb-2">&copy; Todos os direitos reservados a Campus Tech, 2022.</div>
 					</div>
