--- a/index.html
+++ b/index.html
@@ -375,9 +375,28 @@
 					<div class="row1">
 						<h2><b><strong style="color: #FB133A;">E AÍ, BORA SE TORNAR</strong></b></h2>
 						<h2><b>EXPERT EM EVENTOS DE INOVAÇÃO?</b></h2>
-					</div>
+						<div id="countdown1" class="countdown">
+							<div class="time">
+							  <h2 id="days1">00</h2>
+							  <small>Dias</small>
+							</div>
+							<div class="time">
+							  <h2 id="hours1">00</h2>
+							  <small>Horas</small>
+							</div>
+							<div class="time">
+							  <h2 id="minutes1">00</h2>
+							  <small>Minutos</small>
+							</div>
+							<div class="time">
+							  <h2 id="seconds1">00</h2>
+							  <small>Segundos</small>
+							</div>
+						  </div>
+						</div>
 					</div>
 					<a class="btn btn-active com_borda_verde" href="inscricao.html" ><span data-hover="CLIQUE AQUI">INSCREVA-SE</span></a>
+					</div>
 				</div>
 			</div><!-- //CONTAINER -->
 		</section><!-- //NEWS -->
@@ -501,5 +520,7 @@
 	
 
 </div>
+
+<script src="js/countdownPage.js"></script>
 </body>
 </html>
